--- a/Bossfighter/Dungeon.xaml
+++ b/Bossfighter/Dungeon.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bossfighter"
         mc:Ignorable="d"
-        Title="Dungeon" 
+        Title="Stormblade showdown" 
         Height="650" 
         Width="1000">
 
@@ -22,6 +22,8 @@
 
         <Label Content="" Grid.Row="0" Grid.Column="0" />
         <Image Source="/Images/keqing2.png" Grid.Column="0" Grid.Row="1"/>
+        <!--https://genshin-impact.fandom.com/wiki/Osial
+        https://genshin-impact.fandom.com/wiki/Keqing/Lore#Character_Story_1-->
 
     </Grid>
 </Window>
