--- a/Bossfighter/MainWindow.xaml
+++ b/Bossfighter/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bossfighter"
         mc:Ignorable="d"
-        Title="Bossfighter" 
+        Title="Stormblade showdown" 
         Height="840" 
         Width="600" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
 
